--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./bootstrap.min.css.map" />
+    
+
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -23,5 +26,8 @@
    
     <div id="root"></div>
 
+
+
+    <script src="./bootstrap.bundle.js"></script>
   </body>
 </html>
